<resources>
    <string name="app_name">Ksequencer</string>
    <string name="action_settings">Settings</string>
    <string name="bars">Bars ...</string>
    <string name="steps_per_bar">Steps per bar ...</string>
    <string name="bars_per_page">Bars per page ...</string>
    <string name="randomise">Randomise!</string>
    <string name="values">Values ...</string>
    <string name="off_by">Off by ...</string>
    <string name="save">Save ...</string>
    <string name="submit">Submit!</string>
    <string name="siblings">Siblings ...</string>
    <string name="children">Children ...</string>
    <string name="parent"><![CDATA[<< Parent]]></string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="untitled"></string>
    <string name="enter">Enter</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="note">Note</string>
    <string name="controller">Controller</string>
    <string name="channel">Channel</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="slide">Slide</string>
    <string name="unslide">!Slide</string>
    <string name="next">NEXT!</string>
    <string name="on">ON!</string>
    <string name="off">OFF!</string>
    <string name="edit">Edit</string>
    <string name="sharp">#</string>
    <string name="cancel">Cancel</string>
    <string name="server_certificate">Server Certificate</string>
    <string name="server">Server</string>
    <string name="test">Test</string>
    <string name="top">TOP!</string>
    <string name="make_top_level">Turn into top-level pattern?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
