<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bars"
                android:layout_weight="1"
                android:id="@+id/button_bars" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/steps_per_bar"
                android:layout_weight="1"
                android:id="@+id/button_steps_per_bar" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bars_per_page"
                android:layout_weight="1"
                android:id="@+id/button_bars_per_page" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/server"
                android:id="@+id/button_server"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/values"
                android:layout_weight="1"
                android:id="@+id/button_values" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/randomise"
                android:layout_weight="1"
                android:id="@+id/button_randomise" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="&lt;&lt;"
            android:id="@+id/button_previous"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text=">>"
            android:id="@+id/button_next"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:id="@+id/layout_steps">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/parent"
            android:id="@+id/button_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/children"
            android:id="@+id/button_children"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/siblings"
            android:id="@+id/button_siblings"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/top"
            android:id="@+id/button_top"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:id="@+id/button_save"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:id="@+id/button_submit"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>