<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edittext_name"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/channel"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edittext_channel"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/radiogroup_type">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/note"
                android:id="@+id/radiobutton_note"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/controller"
                android:id="@+id/radiobutton_controller"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/controller"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edittext_controller"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/ok"
        android:id="@+id/button_ok"
        android:layout_weight="1" />

</LinearLayout>